# ai-app-team-aiangels

./: ARCHITETURE.md  README.md  app.py  frontend_app.py  netlify.toml  pyproject.toml  requirements.txt  streamlit_app.py
frontend/: ARCHITETURE.md
frontend/src/: App.js
frontend2/src/: ARCHITETURE.md  App.js  index.css
frontend2/src/components/: navbar.jsx
frontend2/src/pages/: about.jsx  login.jsx  main.jsx  quiz.js
prompts/: answer_question_system.txt  meeting_points.txt  quiz_system.txt  rag_system.txt  to_do_list_system.txt  weather_system.txt
rag/: embedder.py  loader.py  rag.py  storing_mongodb.py  vector_search.py
services/: ai_client.py  quizz_service.py  user_creation.py  weather_report.py
src/: ai_client.py  app.py  utils.py
src/tools/: emergency_contacts.py  resources_needed.py  todo_lists.py  weather_report.py
tests/: embedder_tests.py  interactive_tests.py  rag_test.py  user_tests.py  vector_search_test.py  weather_tests.py
tools/: resources_needed.py  todo_lists.py  wrapper.py
utils/: prompt.py  tracing.py
